[tool.poetry]
name = "test2"
version = "0.1.0"
description = ""
authors = ["ArielSantos01 <arielg.santos21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
django = "^5.0.7"
djangorestframework = "^3.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"